--- a/deploy/logs-discovery/values.yaml
+++ b/deploy/logs-discovery/values.yaml
@@ -1,71 +1,25 @@
-loki-stack:
-  enabled: true
 
 replicaCount: 1
-
 image:
-  repository: nginx
-  pullPolicy: IfNotPresent
+  repository: app
+  pullPolicy: Never
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  tag: latest
+  port: 80
 
 podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
 service:
   type: ClusterIP
   port: 80
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources:
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 
 autoscaling:
   enabled: false
@@ -73,9 +27,139 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
-
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
+
+
+loki:
+  enabled: true
+  loki:
+    enabled: true
+    config:
+      table_manager:
+        retention_deletes_enabled: true
+        retention_period: 2h
+    persistence:
+      enabled: true
+      accessModes:
+      - ReadWriteOnce
+      size: 1Gi
+      selector:
+        matchLabels:
+          lokivolume: "true"
+      existingClaim: volume
+
+  config: 
+    logLevel: debug
+    serverPort: 3101
+    snippets:
+      common:
+        - action: replace
+          source_labels:
+            - __meta_kubernetes_pod_node_name
+          target_label: node_name
+
+        - action: replace
+          source_labels:
+            - __meta_kubernetes_namespace
+          target_label: namespace
+
+        - action: replace
+          replacement: $1
+          separator: /
+          source_labels:
+            - app
+            - namespace
+          target_label: job
+
+        - action: replace
+          source_labels:
+            - __meta_kubernetes_pod_name
+          target_label: pod
+
+        - action: replace
+          source_labels:
+            - __meta_kubernetes_pod_container_name
+          target_label: container
+
+        - action: replace
+          replacement: /var/log/pods/*$1/*.log
+          separator: /
+          source_labels:
+            - __meta_kubernetes_pod_uid
+            - __meta_kubernetes_pod_container_name
+          target_label: __path__
+
+        - action: replace
+          replacement: /var/log/pods/*$1/*.log
+          regex: true/(.*)
+          separator: /
+          source_labels:
+            - __meta_kubernetes_pod_annotationpresent_kubernetes_io_config_hash
+            - __meta_kubernetes_pod_annotation_kubernetes_io_config_hash
+            - __meta_kubernetes_pod_container_name
+          target_label: __path__
+  grafana:
+    enabled: true
+    replicas: 1
+    sidecar:
+      datasources:
+        enabled: true
+    adminUser: admin
+    adminPassword: admin
+
+  promtail:
+    enabled: true
+
+  prometheus:
+    enabled: true
+    alertmanager:
+      enabled: false
+    pushgateway:
+      enabled: false
+    nodeExporter:
+      enabled: false
+    serverFiles:
+      prometheus.yml:
+        rule_files:
+          - /etc/config/recording_rules.yml
+          - /etc/config/alerting_rules.yml
+                
+        scrape_configs:
+          - job_name: prometheus
+            static_configs:
+              - targets:
+                - localhost:9090
+          - job_name: 'kubernetes-nodes-cadvisor'
+            scheme: https
+            tls_config:
+              ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+              insecure_skip_verify: true
+            bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+            kubernetes_sd_configs:
+              - role: node
+            relabel_configs:
+            - separator: ;
+              regex: __meta_kubernetes_node_label_(beta_)*(.+)
+              replacement: $2
+              action: labelmap
+            - separator: ;
+              regex: (.*)
+              target_label: __address__
+              replacement: kubernetes.default.svc:443
+              action: replace
+            - source_labels: [__meta_kubernetes_node_name]
+              separator: ;
+              regex: (.+)
+              target_label: __metrics_path__
+              replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
+              action: replace
+            - source_labels: [id]
+              regex: (.*)
+              action: drop
+            metric_relabel_configs:
+            - source_labels: [container]
+              regex: ^$
+              action: drop
+              
