--- a/deploy/logs-discovery/requerments.yaml
+++ b/deploy/logs-discovery/requerments.yaml
@@ -1,6 +1,6 @@
-apiVersion: v2
-name: logs-discovery
-description: A Helm chart for Kubernetes
-type: application
-version: 0.1.0
-appVersion: "1.16.0"
+dependencies:
+  - name: loki-stack
+    condition: loki.enabled
+    version: 2.6.1
+    repository: https://grafana.github.io/helm-charts
+    alias: loki
