--- a/deploy/logs-discovery/Chart.yaml
+++ b/deploy/logs-discovery/Chart.yaml
@@ -10,3 +10,8 @@ dependencies:
     repository: https://grafana.github.io/helm-charts
     alias: loki
     version: 2.6.1
+  - name: fluent-bit
+    condition: fluent.enabled
+    version: 0.19.20
+    repository: https://fluent.github.io/helm-charts
+    alias: fluent
