--- a/deploy/logs-discovery/values.yaml
+++ b/deploy/logs-discovery/values.yaml
@@ -7,7 +7,8 @@ image:
   tag: latest
   port: 80
 
-podAnnotations: {}
+podAnnotations:
+  service: mindbreez
 
 service:
   type: ClusterIP
@@ -31,6 +32,82 @@ nodeSelector: {}
 tolerations: []
 affinity: {}
 
+fluent:
+  enabled: true
+
+  luaScripts: {}
+  podAnnotations: 
+    fluentbit.io/exclude: "true"
+
+  resources:
+    limits:
+      cpu: 500m
+      memory: 512Mi
+    requests:
+      cpu: 500m
+      memory: 512Mi
+
+  logLevel: info
+  metricsPort: 2020
+
+  ## https://docs.fluentbit.io/manual/administration/configuring-fluent-bit/configuration-file
+  config:
+    service: |
+      [SERVICE]
+          Daemon Off
+          Flush 5
+          Log_Level info
+          Parsers_File parsers.conf
+          Parsers_File custom_parsers.conf
+          HTTP_Server On
+          HTTP_Listen 0.0.0.0
+          HTTP_Port 2020
+          Health_Check On
+
+    ## https://docs.fluentbit.io/manual/pipeline/inputs
+    inputs: |
+      [INPUT]
+          Name tail
+          Tag kube.*
+          Path /var/log/containers/*.log
+          multiline.parser docker, cri
+          Mem_Buf_Limit 5MB
+          Parser  docker
+
+    ## https://docs.fluentbit.io/manual/pipeline/filters
+    filters: |
+      [FILTER]
+          Name             kubernetes
+          Match            kube.*
+          Kube_URL         https://kubernetes.default.svc:443
+          Kube_Tag_Prefix  kube.var.log.containers.
+          Kube_CA_File     /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+          Kube_Token_File  /var/run/secrets/kubernetes.io/serviceaccount/token
+          Merge_Log        On
+          Merge_Log_Key    log_processed
+          K8S-Logging.Parser On
+          K8S-Logging.Exclude On
+          Labels On
+          Annotations On
+
+    ## https://docs.fluentbit.io/manual/pipeline/outputs
+    outputs: |
+      [OUTPUT]
+          Name loki
+          Match kube.*
+          Host mindbreez-loki
+          Port 3100
+          labels job=aaaaa
+          auto_kubernetes_labels on
+            
+    ## https://docs.fluentbit.io/manual/pipeline/parsers
+    customParsers: |
+      [PARSER]
+          Name docker_no_time
+          Format json
+          Time_Keep Off
+          Time_Key time
+          Time_Format %Y-%m-%dT%H:%M:%S.%L
 
 loki:
   enabled: true
@@ -40,6 +117,10 @@ loki:
       table_manager:
         retention_deletes_enabled: true
         retention_period: 2h
+    podAnnotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/port: "http-metrics"
+      fluentbit.io/exclude: "true"
     persistence:
       enabled: true
       accessModes:
@@ -49,57 +130,6 @@ loki:
         matchLabels:
           lokivolume: "true"
       existingClaim: volume
-
-  config: 
-    logLevel: debug
-    serverPort: 3101
-    snippets:
-      common:
-        - action: replace
-          source_labels:
-            - __meta_kubernetes_pod_node_name
-          target_label: node_name
-
-        - action: replace
-          source_labels:
-            - __meta_kubernetes_namespace
-          target_label: namespace
-
-        - action: replace
-          replacement: $1
-          separator: /
-          source_labels:
-            - app
-            - namespace
-          target_label: job
-
-        - action: replace
-          source_labels:
-            - __meta_kubernetes_pod_name
-          target_label: pod
-
-        - action: replace
-          source_labels:
-            - __meta_kubernetes_pod_container_name
-          target_label: container
-
-        - action: replace
-          replacement: /var/log/pods/*$1/*.log
-          separator: /
-          source_labels:
-            - __meta_kubernetes_pod_uid
-            - __meta_kubernetes_pod_container_name
-          target_label: __path__
-
-        - action: replace
-          replacement: /var/log/pods/*$1/*.log
-          regex: true/(.*)
-          separator: /
-          source_labels:
-            - __meta_kubernetes_pod_annotationpresent_kubernetes_io_config_hash
-            - __meta_kubernetes_pod_annotation_kubernetes_io_config_hash
-            - __meta_kubernetes_pod_container_name
-          target_label: __path__
   grafana:
     enabled: true
     replicas: 1
@@ -108,10 +138,8 @@ loki:
         enabled: true
     adminUser: admin
     adminPassword: admin
-
   promtail:
-    enabled: true
-
+    enabled: false
   prometheus:
     enabled: true
     alertmanager:
@@ -155,9 +183,6 @@ loki:
               target_label: __metrics_path__
               replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
               action: replace
-            - source_labels: [id]
-              regex: (.*)
-              action: drop
             metric_relabel_configs:
             - source_labels: [container]
               regex: ^$
