--- a/deploy/logs-discovery/values.yaml
+++ b/deploy/logs-discovery/values.yaml
@@ -58,7 +58,7 @@ fluent:
           Flush 5
           Log_Level info
           Parsers_File parsers.conf
-          Parsers_File custom_parsers.conf
+          Parsers_File /fluent-bit/etc/custom_parsers.conf
           HTTP_Server On
           HTTP_Listen 0.0.0.0
           HTTP_Port 2020
@@ -69,10 +69,15 @@ fluent:
       [INPUT]
           Name tail
           Tag kube.*
-          Path /var/log/containers/*.log
-          multiline.parser docker, cri
+          Path /var/log/containers/mindbreez-logs-discovery*.log
+          multiline.parser multiline_parser, docker
           Mem_Buf_Limit 5MB
-          Parser  docker
+          Parser docker
+
+      [INPUT]
+          Name   dummy
+          Tag    dummy.log
+          Dummy  {}
 
     ## https://docs.fluentbit.io/manual/pipeline/filters
     filters: |
@@ -90,6 +95,7 @@ fluent:
           Labels On
           Annotations On
 
+
     ## https://docs.fluentbit.io/manual/pipeline/outputs
     outputs: |
       [OUTPUT]
@@ -97,17 +103,45 @@ fluent:
           Match kube.*
           Host mindbreez-loki
           Port 3100
-          labels job=aaaaa
+          labels job=fluentbit, pod=$kubernetes['pod_name'], namespace=$kubernetes['namespace_name'], host=$kubernetes['host'], container=$kubernetes['container_name']
           auto_kubernetes_labels on
-            
+
+      [OUTPUT]
+          Name stdout
+          Match kube.var.log.containers.mindbreez-logs-discovery*
+
     ## https://docs.fluentbit.io/manual/pipeline/parsers
     customParsers: |
       [PARSER]
-          Name docker_no_time
-          Format json
-          Time_Keep Off
-          Time_Key time
-          Time_Format %Y-%m-%dT%H:%M:%S.%L
+        Name docker_no_time
+        Format json
+        Time_Keep Off
+        Time_Key time
+        Time_Format %Y-%m-%dT%H:%M:%S.%L
+
+      [PARSER]
+        Name   app_parser
+        Format regex
+        Regex  ^(?<host>[^ ]*) - - \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>[^\"]*?)(?: +\S*)?)?" (?<code>[^ ]*) -$
+        Types  status:integer
+
+      [MULTILINE_PARSER]
+        name          multiline_parser
+        type          regex
+        flush_timeout 1000
+        #
+        # Regex rules for multiline parsing
+        # ---------------------------------
+        #
+        # configuration hints:
+        #
+        #  - first state always has the name: start_state
+        #  - every field in the rule must be inside double quotes
+        #
+        # rules |   state name  | regex pattern                  | next state
+        # ------|---------------|--------------------------------------------
+        rule      "start_state"   "([^ ]*) - - \[([^\]]*)\].*-"  "cont"
+        rule      "cont"          "^(?<header>[^:]*): (?<value>.*)$"                     "cont"
 
 loki:
   enabled: true
